force-app/main/default/objects/Booking__c/fields/Fare_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fare_Amount__c</fullName>
    <label>Fare Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>