force-app/main/default/objects/Booking__c/fields/Payment_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_Message__c</fullName>
    <formula>IF(
    ISPICKVAL(Payment_Status__c, &quot;Paid&quot;),
    &quot;Payment Completed&quot;,
    IF(
        ISPICKVAL(Payment_Status__c, &quot;Pending&quot;),
        &quot;Payment Awaiting&quot;,
        IF(
            ISPICKVAL(Payment_Status__c, &quot;Failed&quot;),
            &quot;Payment Failed&quot;,
            &quot;Payment Refunded&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status Message</label>
    <type>Text</type>
</CustomField>