force-app/main/default/objects/Booking__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <inlineHelpText>12A</inlineHelpText>
    <label>Seat Number</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>