force-app/main/default/objects/Booking__c/fields/Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status__c</fullName>
    <label>Ticket Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Issued</fullName>
                <default>true</default>
                <label>Not Issued</label>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>