force-app/main/default/objects/Booking__c/fields/Total_Fare__c.field-meta.xml
<CustomField>
    <fullName>Total_Fare__c</fullName>
    <formula>Fare_Amount__c  * 1.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>5% service tax</inlineHelpText>
    <label>Total Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>