force-app/main/default/objects/Booking__c/validationRules/Confirmed_Booking_Cannot_Have_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_Booking_Cannot_Have_Cancelled</fullName>
    <active>true</active>
    <description>Confirmed_Booking_Cannot_Have_Cancelled_Ticket</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Booking_Status__c , &quot;Confirmed&quot;),
ISPICKVAL( Ticket_Status__c , &quot;Cancelled&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Ticket_Status__c</errorDisplayField>
    <errorMessage>A Confirmed booking cannot have a Cancelled ticket.</errorMessage>
</ValidationRule>