force-app/main/default/objects/Booking__c/validationRules/Confirmed_Booking_Must_Be_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_Booking_Must_Be_Paid</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Booking_Status__c, &quot;Confirmed&quot;),
 NOT( ISPICKVAL(Payment_Status__c, &quot;Paid&quot;))  )</errorConditionFormula>
    <errorDisplayField>Booking_Status__c</errorDisplayField>
    <errorMessage>A booking can be Confirmed only when Payment Status is Paid.</errorMessage>
</ValidationRule>