force-app/main/default/objects/Booking__c/validationRules/Fare_Amount_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Fare_Amount_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Fare_Amount__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Fare_Amount__c</errorDisplayField>
    <errorMessage>Fare Amount must be greater than zero.</errorMessage>
</ValidationRule>