force-app/main/default/objects/Booking__c/validationRules/Issued_Ticket_Must_Be_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Issued_Ticket_Must_Be_Paid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Ticket_Status__c, &quot;Issued&quot;),
    NOT(ISPICKVAL(Payment_Status__c, &quot;Paid&quot;))
)</errorConditionFormula>
    <errorDisplayField>Ticket_Status__c</errorDisplayField>
    <errorMessage>A ticket can be Issued only when Payment Status is Paid.</errorMessage>
</ValidationRule>